--- a/Project-02 (RIEAD)/assets/styles.css
+++ b/Project-02 (RIEAD)/assets/styles.css
@@ -7,6 +7,10 @@
     font-family: 'Exo 2', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 
 /* global styles */
 
@@ -35,9 +39,33 @@ button{
     color: #fff;
 }
 
+.title{
+    font-size: 40px;
+    color: #fff;
+    font-weight: 600;
+    position: relative;
+    text-align: center;
+}
+
+.title::before{
+    content: "";
+    position: absolute;
+    width: 225px;
+    height: 2px;
+    bottom: -10px;
+    background-color: #fff;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.title span{
+    color: #F86F03;
+}
+
 /* Header section styles */
 
 header{
+    position: fixed;
     width: 100%;
     height: 10vh;
     background-color: #170550;
@@ -69,10 +97,11 @@ header .container ul li a{
 header .container ul li:hover a{
     color: #F86F03;    
 }
+/* Header section styles end */
 
-/* Home section styles */
+/* Home section styles start */
 .home{
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-color: #31065A;
 }
@@ -135,3 +164,48 @@ header .container ul li:hover a{
 .home .container .content .social-links a box-icon{
     color: #fff !important;
 }
+/* Home section style end */
+
+/* About section style start  */
+.about-me{
+    width: 100%;
+    height: 100vh;
+    background-color: #170550;
+    display: flex;
+    align-items: center;
+}
+
+.about-me .container{
+    display: flex;
+    gap: 100px;
+    flex-direction: column;
+}
+
+.about-me .content{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    gap: 120px;
+}
+
+.about-me .content .about-content{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    color: #fff;
+}
+
+.about-me .content .about-content h2{
+    font-size: 30px;
+    font-weight: 600;
+    width: 300px;
+}
+
+.about-me .content .about-content .paragraphs{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    font-size: 18px;
+    font-weight: 600;
+}
+/* About section styles end */
