--- a/Project-02 (RIEAD)/assets/styles.css
+++ b/Project-02 (RIEAD)/assets/styles.css
@@ -352,7 +352,6 @@ header .container ul li:hover a{
     width: 100%;
     height: 100%;
     background-color: #ad5bfb;
-    opacity: 0.6;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -374,3 +373,84 @@ header .container ul li:hover a{
     top: 0;
 }
 /* Portfolio section styles end */
+
+/* Contact section styles start */
+.contact{
+    width: 100%;
+    height: 100vh;
+    background-color: #170550;
+}
+
+.contact .container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 90px;
+    height: 100%;
+}
+
+.contact .container .box{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contact .container .box .info{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.contact .container .box .info .item{
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 18px;
+    width: 650px;
+}
+
+.form .contact-detial{
+    width: 100%;
+    height: 40px;
+    border-radius: 50px;
+    background-color: #43366a;
+    padding: 10px 30px;
+    outline: none;
+    border: none;
+}
+
+.form div{
+    display: flex;
+    width: 100%;
+    gap: 17px;
+}
+
+.form textarea.contact-detial{
+    height: 150px;
+    border-radius: 20px;
+    resize: none;
+}
+
+.form .contact-detial::placeholder{
+    font-size: 16px;
+    color: #fff;
+    font-weight: 600;
+}
+
+.form button{
+    width: 200px;
+    height: 40px;
+    background-color: #43366a;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+}
