--- a/Project-02 (RIEAD)/assets/styles.css
+++ b/Project-02 (RIEAD)/assets/styles.css
@@ -169,8 +169,9 @@ header .container ul li:hover a{
 
 /* About section style start  */
 .about-me{
+    padding: 60px 0px;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: #170550;
     display: flex;
     align-items: center;
@@ -213,8 +214,9 @@ header .container ul li:hover a{
 
 /* Services section styles start */
 .services{
+    padding: 60px 0px;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: #461959;
     display: flex;
     align-items: center;
@@ -260,8 +262,9 @@ header .container ul li:hover a{
 
 /* Skills section styles start */
 .skills{
+    padding: 60px 0px;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: #170550;
     display: flex;
     align-items: center;
@@ -315,8 +318,9 @@ header .container ul li:hover a{
 
 /* Portfolio section styles start */
 .portfolio{
+    padding: 60px 0px;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: #461959;
 }
 
@@ -376,8 +380,9 @@ header .container ul li:hover a{
 
 /* Contact section styles start */
 .contact{
+    padding: 60px 0px;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: #170550;
 }
 
