--- a/Project-03 (DoctorCare)/assets/styles.css
+++ b/Project-03 (DoctorCare)/assets/styles.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "DM Sans", sans-serif;
+    transition: all .3s;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 /* Variables */
@@ -16,10 +21,12 @@
     --primary-hover-color: #00453A;
 
     /* Secondary colors */
-    --headline: #061800;
-    --paragraph: #384633;
-    --white: #3E3E3E;
+    --headline: #212529;
+    --paragraph: #495057;
+    --white: #fff;
 }
+
+/* Default styles */
 
 .container{
     width: 85%;
@@ -35,6 +42,214 @@ a{
     text-decoration: none;
 }
 
+ul{
+    list-style: none;
+}
+
 p{
     text-decoration: none;
+}
+
+/* Global buttons styles */
+
+button{
+    padding: 10px 24px;
+    border-radius: 40px;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.primary-button{
+    background-color: var(--primary-color);
+    color: #fff;
+    border: none;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: all .3s;
+}
+
+.primary-button:hover{
+    background-color: var(--primary-hover-color);
+}
+
+.secondary-button{
+    background-color: transparent;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    transition: .3s all;
+}
+
+.secondary-button:hover{
+    background-color: var(--primary-color);
+    color: var(--white);   
+    transition: .3s;
+}
+
+/* Global text styles */
+.paragraph{
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.title{
+    font-size: 52px;
+    color: var(--headline);
+    font-weight: 700;
+}
+
+.caption{
+    font-size: 18px;
+    color: var(--paragraph);
+}
+
+/* Header section styles start */
+header{
+    width: 100%;
+    height: 72px;
+    z-index: 99;
+    overflow: hidden;
+    position: fixed;
+    background-color: transparent;
+}
+
+header .container{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header .container img{
+    width: 132px;
+}
+
+header .container ul{
+    display: flex;
+    gap: 32px;
+    height: 72px;
+}
+
+header .container ul li{
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+header .container ul li a{
+    color: var(--primary-color);
+    font-size: 18px;
+    font-weight: 400;
+    transition: .3s;
+}
+
+header .container ul li a::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    bottom: -3px;
+    background-color: var(--primary-color);
+    transition: .3s;
+}
+
+header .container ul li:hover a, header .container ul li.active a{
+    font-weight: 700;
+    transition: .3s;
+}
+
+header .container ul li:hover a::after, header .container ul li.active a::after{
+    bottom: 0px;
+    transition: .3s;
+}
+
+header.active{
+    background-color: var(--primary-color);
+}
+
+header.active .container nav ul li a{
+    color: #fff;
+}
+
+header.active .container nav ul li a::after{
+    background-color: #fff;
+}
+
+header.active .container button{
+    border-color: #fff;
+    color: #fff;
+}
+/* Header section styles end */
+
+/* Main section styles start */
+main{
+    width: 100%;
+    height: 100vh;   
+    background-color: var(--primary-light-color);
+}
+
+main .container{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .container .right{
+    width: clamp(605px, 50%, 327px);
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+/* Main section styles end */
+
+/* Stats section styles start */
+.our-stats{
+    width: 100%;
+    background-color: var(--primary-light-color-02);
+}
+
+.our-stats .container{
+    position: relative;
+}
+
+.our-stats .container .stats{
+    position: absolute;
+    padding: 60px 120px;
+    width: 100%;
+    bottom: 0;
+    transform: translateY(50%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--white);   
+    border-radius: 6px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.our-stats .container .stats .box{
+    text-align: center;
+}
+
+.our-stats .container .stats .box h2{
+    font-size: 48px;
+    color: var(--headline);
+    font-weight: 700;
+}
+
+.our-stats .container .stats .box p{
+    font-size: 16px;
+    color: var(--primary-color);
+}
+
+.our-stats .container .stats hr{
+    height: 83px;
+    width: 1px;
+    border: none;
+    background-color: var(--primary-color);
 }
