--- a/Project-03 (DoctorCare)/assets/styles.css
+++ b/Project-03 (DoctorCare)/assets/styles.css
@@ -401,7 +401,7 @@ main .container .right{
 
 /* Footer section styles start */
 footer{
-    padding: 80px;
+    padding: 80px 0px;
     width: 100%;
     background-color: var(--primary-color);
 }
