--- a/Project-03 (DoctorCare)/assets/styles.css
+++ b/Project-03 (DoctorCare)/assets/styles.css
@@ -138,7 +138,7 @@ button{
 }
 
 .hamb.active span:nth-child(1){
-    transform: translateY(12px) rotate(45deg);
+    transform: translateY(13px) rotate(45deg);
 }
 
 .hamb.active span:nth-child(3){
@@ -147,6 +147,38 @@ button{
 
 .hamb.active span:last-child{
     width: 30px;
+}
+
+/* Hamb menu styles */
+.hamb-menu{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    color: #fff;
+    background-color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 80px;
+}
+
+.hamb-menu ul{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 48px;
+}
+
+.hamb-menu ul li a{
+    color: #fff;
+}
+
+.hamb-menu ul button{
+    background-color: #fff;
+    border: none;
+    color: var(--primary-color);
+    font-weight: 700;
 }
 
 /* Header section styles start */
