--- a/Project-03 (DoctorCare)/assets/styles.css
+++ b/Project-03 (DoctorCare)/assets/styles.css
@@ -151,9 +151,11 @@ button{
 
 /* Hamb menu styles */
 .hamb-menu{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
+    position: flex;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     color: #fff;
     background-color: var(--primary-color);
     display: flex;
