--- a/Project-04 (Portfolio Caleb Nyong)/assets/main.css
+++ b/Project-04 (Portfolio Caleb Nyong)/assets/main.css
@@ -1,1 +1,64 @@
-/*# sourceMappingURL=main.css.map */
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  width: 80%;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.primary-btn {
+  border-radius: 5px;
+  border: none;
+  font-size: 15px;
+  font-weight: 500;
+  color: #fff;
+  padding: 10px 30px;
+  background-color: #FCC028;
+}
+
+header {
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  z-index: 99;
+}
+header .container {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .container .nav-links {
+  display: flex;
+  gap: 12px;
+}
+header .container .nav-links li {
+  padding: 10px;
+}
+header .container .nav-links li a {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 21px;
+}
+header .container .nav-links li a:hover {
+  font-weight: 700;
+  text-shadow: 2px 5px 2px rgba(0, 0, 0, 0.25);
+}/*# sourceMappingURL=main.css.map */
