Main page section finished

--- a/Project-04 (Portfolio Caleb Nyong)/assets/styles/_styles.scss
+++ b/Project-04 (Portfolio Caleb Nyong)/assets/styles/_styles.scss
@@ -35,6 +35,28 @@ button{
     background-color: $primary-color;
 }
 
+.paragraph{
+    font-size: 18px;
+    color: $primary-color;
+}
+
+.title{
+    font-size: 70px;
+    font-weight: 600;
+}
+
+.caption{
+    font-size: 24px;
+    font-weight: 400;
+    color: #207733;
+}
+
+.description{
+    font-size: 18px;
+    color: #000000;
+    opacity: .5;
+}
+
 // Header 
 header{
     width: 100%;
@@ -67,5 +89,82 @@ header{
                 }
             }
         }
+    }
+}
+
+.main{
+    height: 100vh;
+    position: relative;
+
+    .container{
+        height: 100%;
+        display: flex;
+        align-items: center;
+
+        .left{
+            width: 600px;        
+            display: flex;
+            flex-direction: column;
+            gap: 35px;
+
+            .texts{
+                display: flex;
+                flex-direction: column;
+                gap: 6.8px;
+            }
+
+            .btns{
+                display: flex;
+                align-items: center;
+                gap: 21px; 
+
+                a{
+                    display: flex;
+                    align-items: center;
+                    gap: 23px;
+                    font-size: 15px;
+                    font-weight: 600;   
+                }
+            }
+        }
+
+        .profile-card{
+            cursor: pointer;
+            position: absolute;
+            bottom: 0;
+            left: 60px;
+            transform: translateY(50%);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 14px 18px;
+            border-radius: 7px;
+            box-shadow: 0px 2.72px 34.02px 0px #13173D1A;
+            
+            .top{
+                display: flex;
+                gap: 8px;
+                align-items: center;
+
+                img{
+                    width: 47px;
+                    height: 47px;
+                }
+
+                .name{
+                    font-size: 16px;    
+                    font-weight: 500;
+                }
+
+                .date{
+                    font-size: 14px;
+                    opacity: .5;
+                }
+            }
+
+            .bottom{
+                opacity: .7;
+            }
+        }   
     }
 }
