--- a/Project-04 (Portfolio Caleb Nyong)/assets/main.css
+++ b/Project-04 (Portfolio Caleb Nyong)/assets/main.css
@@ -34,6 +34,28 @@ button {
   background-color: #FCC028;
 }
 
+.paragraph {
+  font-size: 18px;
+  color: #FCC028;
+}
+
+.title {
+  font-size: 70px;
+  font-weight: 600;
+}
+
+.caption {
+  font-size: 24px;
+  font-weight: 400;
+  color: #207733;
+}
+
+.description {
+  font-size: 18px;
+  color: #000000;
+  opacity: 0.5;
+}
+
 header {
   width: 100%;
   height: 70px;
@@ -61,4 +83,70 @@ header .container .nav-links li a {
 header .container .nav-links li a:hover {
   font-weight: 700;
   text-shadow: 2px 5px 2px rgba(0, 0, 0, 0.25);
+}
+
+.main {
+  height: 100vh;
+  position: relative;
+}
+.main .container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.main .container .left {
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.main .container .left .texts {
+  display: flex;
+  flex-direction: column;
+  gap: 6.8px;
+}
+.main .container .left .btns {
+  display: flex;
+  align-items: center;
+  gap: 21px;
+}
+.main .container .left .btns a {
+  display: flex;
+  align-items: center;
+  gap: 23px;
+  font-size: 15px;
+  font-weight: 600;
+}
+.main .container .profile-card {
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  left: 60px;
+  transform: translateY(50%);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 14px 18px;
+  border-radius: 7px;
+  box-shadow: 0px 2.72px 34.02px 0px rgba(19, 23, 61, 0.1019607843);
+}
+.main .container .profile-card .top {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.main .container .profile-card .top img {
+  width: 47px;
+  height: 47px;
+}
+.main .container .profile-card .top .name {
+  font-size: 16px;
+  font-weight: 500;
+}
+.main .container .profile-card .top .date {
+  font-size: 14px;
+  opacity: 0.5;
+}
+.main .container .profile-card .bottom {
+  opacity: 0.7;
 }/*# sourceMappingURL=main.css.map */
