--- a/Project-04 (Portfolio Caleb Nyong)/assets/main.css
+++ b/Project-04 (Portfolio Caleb Nyong)/assets/main.css
@@ -5,6 +5,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   width: 80%;
   max-width: 1440px;
@@ -85,6 +89,19 @@ header .container .nav-links li a:hover {
   text-shadow: 2px 5px 2px rgba(0, 0, 0, 0.25);
 }
 
+.btns {
+  display: flex;
+  align-items: center;
+  gap: 21px;
+}
+.btns a {
+  display: flex;
+  align-items: center;
+  gap: 23px;
+  font-size: 15px;
+  font-weight: 600;
+}
+
 .main {
   height: 100vh;
   position: relative;
@@ -104,18 +121,6 @@ header .container .nav-links li a:hover {
   display: flex;
   flex-direction: column;
   gap: 6.8px;
-}
-.main .container .left .btns {
-  display: flex;
-  align-items: center;
-  gap: 21px;
-}
-.main .container .left .btns a {
-  display: flex;
-  align-items: center;
-  gap: 23px;
-  font-size: 15px;
-  font-weight: 600;
 }
 .main .container .profile-card {
   cursor: pointer;
@@ -149,4 +154,49 @@ header .container .nav-links li a:hover {
 }
 .main .container .profile-card .bottom {
   opacity: 0.7;
+}
+
+.about {
+  height: auto;
+}
+.about .container {
+  height: 100%;
+  padding: 60px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.about .container .content {
+  width: 650px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.about .container .content .texts {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.about .container .content .texts h1 {
+  font-weight: 400;
+  font-size: 36px;
+}
+.about .container .content .icons {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+}
+.about .container .content .icons .icon {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.about .container .content .icons .icon p {
+  font-size: 16px;
+  font-weight: 500;
+  color: #FCC028;
+}
+.about .container .content .icons .icon h4 {
+  font-size: 16px;
+  font-weight: 400;
 }/*# sourceMappingURL=main.css.map */
